<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WiFi Connect</string>
    <string name="app_title">WiFi Connect for Tasker</string>
    <string name="ap_name">Access Point Name</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">WiFi\nConnect</string>
    <string name="button_wifi">WiFi</string>
    <string name="button_select">Select</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_close">Close</string>
    <string name="show_toast">Show toast when action toriggerd</string>
    <string name="edit_Ssid_hint">Input SSID in string</string>
    <string name="pick_ssid">Pick SSID</string>
    <string name="title_activity_edit">WiFi Connect</string>
    <string name="msg_wifi_disable">WiFi is disabled</string>
    <string name="msg_connecting">Connecting %1$s</string>
    <string name="msg_connected">Connected %1$s</string>
    <string name="msg_already_connect">Already connect %1$s</string> 
    <string name="msg_failed_to_connect">Failed to connect %1$s</string>
    <string name="msg_not_configured">Not configured %1$s</string>
</resources>